--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,8 +6,26 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+img {
+  max-width: 300px;
+}
+
+select {
+  min-width: 60px;
+}
+
+h3 {
+  font-size: 14px !important;
+}
+
 a {
   color: inherit;
+  text-decoration: none;
+}
+
+a:hover {
+  border-color: #000 !important;
+  color: #000 !important;
   text-decoration: none;
 }
 
