--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,3 +68,20 @@ footer {
 h3 {
   font-size: 20px !important;
 }
+
+.delivery-option-icon {
+  margin-left: 0px;
+}
+
+.delivery-option-name {
+  margin-left: 10px;
+}
+
+.delivery-option-price {
+  margin-left: 30px;
+}
+
+svg {
+  height: 20px;
+  width: 20px;
+}
